syntax = "proto3";
import "common.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "URegister.Users";

package user;

service AppUserManager {
  rpc GetRoles (google.protobuf.Empty) returns (AppRoles);
  rpc UpsertUser (UserData) returns (common.ResultStatus);
  rpc AuthorizeUser (AuthorizeUserData) returns (AppUser);
  rpc GetUserById (UserFilter) returns (UserResult);
  rpc GetUserList (UserFilter) returns (UserList);
  rpc RemoveUserLogin (UserFilter) returns (common.ResultStatus);
}

message UserData {
	optional string id = 1;
	string pid = 2;
	string user_name = 3;
	optional string email = 4;
	string first_name = 5;
	string last_name = 6;
	string administration_id = 7;
	string administration = 8;
	repeated RoleData roles = 9;
}

message RoleData {
	string roleId = 1;
	string label = 2;
	optional string register_code = 3;
}

message AppRoles {
	repeated RoleData roles = 1;
	common.ResultStatus status = 2;
}

message AppClaim {
	string type = 1;
	string value = 2;
}

message AppUser {
	string id = 1;
	optional string email = 2;
	string first_name = 3;
	string last_name = 4;
	string administration_id = 5;
	repeated string roles = 6;
	repeated AppClaim claims = 7;
	common.ResultStatus status = 8;
}

message AuthorizeUserData {
	string pid = 1;
	optional string register_code = 2;
}

message UserFilter {
	optional string id = 1;
	optional string administration_id = 2;
	int32 page = 3;
	int32 page_size = 4;
}

message UserListData {
	string id = 1;
	string first_name = 2;
	string last_name = 3;
	string email = 4;
}

message UserList {
	repeated UserListData users = 1;
	common.ResultStatus status = 2;
}
message UserResult {
	UserData user = 1;
	common.ResultStatus status = 2;
}